public/lite/api/en/r1.6/_sources/generate/program_listing_file_include_core_ops_dynamic_quant.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_core_ops_dynamic_quant.h:

Program Listing for File dynamic_quant.h
========================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_core_ops_dynamic_quant.h>` (``include/core/ops/dynamic_quant.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_CORE_OPS_DYNAMIC_QUANT_H_
   #define MINDSPORE_CORE_OPS_DYNAMIC_QUANT_H_
   
   #include <map>
   #include <vector>
   #include <string>
   #include <memory>
   #include <algorithm>
   #include "ops/op_utils.h"
   #include "ops/primitive_c.h"
   #include "abstract/primitive_infer_map.h"
   #include "abstract/abstract_value.h"
   #include "utils/check_convert_utils.h"
   
   namespace mindspore {
   namespace ops {
   constexpr auto kNameDynamicQuant = "DynamicQuant";
   class MS_CORE_API DynamicQuant : public PrimitiveC {
    public:
     DynamicQuant() : PrimitiveC(kNameDynamicQuant) {}
   
     ~DynamicQuant() = default;
   
     MS_DECLARE_PARENT(DynamicQuant, PrimitiveC);
   
     void Init(const bool symmetric, const int64_t dst_type);
   
     void set_symmetric(const bool symmetric);
   
     bool get_symmetric() const;
   
     void set_dst_type(const int64_t dst_type);
   
     int64_t get_dst_type() const;
   };
   AbstractBasePtr DynamicQuantInfer(const abstract::AnalysisEnginePtr &, const PrimitivePtr &primitive,
                                     const std::vector<AbstractBasePtr> &input_args);
   }  // namespace ops
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_OPS_QUANTD_TYPE_CAST_H_
